# vizpix

./: .gitignore  CLAUDE.md  Makefile  README.md  architecture.md  dev-tooling-plan.md  index.html  lefthook.yml  netlify.toml  package-lock.json  package.json  vite.config.ts  wasm-optimization-opportunities.md
.github/workflows/: ci.yml
crates/vizpix-core/: Cargo.toml
crates/vizpix-core/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs
scripts/ralph/: .last-branch  CLAUDE.md  REVIEW.md  chain-runs.sh  prd-rich-text.json  prd-ux-visual-polish.json  prd.json  progress.txt  prompt.md  ralph.sh
scripts/ralph/archive/2026-03-07-production-polish/: prd.json  progress.txt
scripts/ralph/archive/2026-03-07-rich-text/: progress.txt
scripts/ralph/tests/: browser-helper.ts  browser-test.ts  fix-09-keyboard-pan.ts  fix-10-slider-thumb.ts  playwright.config.ts
spec/: extended-layers.md  vpd-format.md
src/: App.tsx
tasks/: prd-stability-and-ux-overhaul.md
ui/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/public/: manifest.json
ui/src/: App.tsx  index.css
ui/src/components/canvas/: checkerboard.ts  (+10 more)
ui/src/hooks/: use-canvas-compositor.ts  use-canvas-interactions.ts  use-keyboard-shortcuts.ts  use-responsive.ts  use-virtual-keyboard.ts
ui/src/lib/: blend-modes.ts  canvas-utils.ts  constants.ts  export-utils.ts  histogram-utils.ts  hit-test-cache.ts  layer-factory.ts  layer-render.ts  layer-utils.ts  rich-text-utils.ts  snap-utils.ts  vpd.ts
ui/src/store/: editor-store.ts  index.ts  types.ts
(+36 files in other folders)
